# mini-query-lang

./: .gitignore  CMakeLists.txt  Makefile  TokenType.hpp  Tokenizer.hpp  debug.hpp  lang.txt  main  main.cpp  parser.hpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: Makefile  TokenType.hpp  Tokenizer.hpp  main  main.cpp  parser.hpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
tests/: tokenizer_tests.cpp
